# data-pipeline-construction

dashboard/: README.md
inboundgw/: README.md
mlops/: .gitignore  .pre-commit-config.yaml  README.md  batch_prediction.py  crontab  prediction_drift.json  pyproject.toml  retrain.py  train.py
mlops/.devcontainer/: Dockerfile  devcontainer.json
mlops/data/: house_rent_dataset.csv
mlops/predictions/: 20230605_rent_prediction.csv
mlops/src/common/: logger.py
outboundgw/: README.md
sensor/: README.md
